@@ -1,3 +1,8 @@
+2007-01-26  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gsearchtool-callbacks.c: (move_to_trash_cb): Fix bug #397945,
+	cursor goes away from found files list when deleting a file.
+
 2006-11-19  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gsearchtool-support.c: fix compiler warning
